--- a/motifdjango/motifapp/templates/motifapp/login.html
+++ b/motifdjango/motifapp/templates/motifapp/login.html
@@ -1,49 +1,28 @@
-{% block login_active %}active {% endblock %}
-
-
+{% extends 'motifapp/base.html' %}
 {% block body %}
-<div class="container-fluid">
-    <div class="row">
-        <div class="col-sm-12 col-md-6">
-            <div class="panel panel-default">
-                <div class="panel-body">
-                    <h3>Log In</h3>
-                    {% if error_message %}
-                    <p><strong>{{ error_message }}</strong></p>
-                    {% endif %}
-                    <form class="form-horizontal" role="form" action="{% url 'motifapp:login' %}" method="post" enctype="multipart/form-data">
-                        {% csrf_token %}
-                        <div class="form-group">
-                            <label class="control-label col-sm-2" for="id_username">
-                                Username:
-                            </label>
-                            <div class="col-sm-10">
-                                <input id="id_username" maxlength="30" name="username" type="text">
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <label class="control-label col-sm-2" for="id_password">
-                                Password:
-                            </label>
-                            <div class="col-sm-10">
-                                <input id="id_password" maxlength="30" name="password" type="password">
-                            </div>
-                        </div>
 
-                        <div class="form-group">
-                            <div class="col-sm-offset-2 col-sm-10">
-                                <button type="submit" class="btn btn-success">Submit</button>
-                            </div>
-                        </div>
-                    </form>
-                </div>
-                <div class="panel-footer">
-                    Don't have an account? <a href="{% url 'motifapp:register' %}">Click here</a> to register.
-                </div>
-            </div>
+<div class="container">
+
+    <form class="form-signin" role="form" action="{% url 'motifapp:login' %}" method="post" enctype="multipart/form-data">
+        {% csrf_token %}
+        <h2 class="form-signin-heading">Please sign in</h2>
+
+        <!--error message -->
+        {% if error_message %}
+        <p><strong>{{ error_message }}</strong></p>
+        {% endif %}
+
+        <label for="id_username" class="sr-only">Username</label>
+        <input type="text" id="id_username" class="form-control" placeholder="Username" name="username" required autofocus>
+        <label for="id_password" class="sr-only">Password</label>
+        <input type="password" id="id_password" class="form-control" placeholder="Password" name="password"  required>
+        <div class="checkbox">
+            <label>
+                <input type="checkbox" value="remember-me"> Remember me
+            </label>
         </div>
-    </div>
-
+        <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+    </form>
 </div>
 
 {% endblock %}
